Bug 1691553 - Update NSMenuItem title when the label attribute changes, without requiring a menu rebuild. r=harry

I'm planning to write a test for this, in a follow-up patch.

Differential Revision: https://phabricator.services.mozilla.com/D108735